updated pages with CSS

--- a/menu.html
+++ b/menu.html
@@ -3,8 +3,10 @@
 <head>
 	<title>JavaJam Coffee House Menu</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="javajam.css">
 </head>
 <body>
+<div id="wrapper">
 <h1>JavaJam Coffee House</h1>
 <nav>
 <b>
@@ -33,7 +35,7 @@
 <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a></i></p>
 
 </footer>
-	
+</div>	
 </body>
 
 	</html>
