--- a/menu.html
+++ b/menu.html
@@ -3,16 +3,16 @@
 <head>
 	<title>JavaJam Coffee House Menu</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="javajam.css">
 </head>
 <body>
+<div id="wrapper">
 <h1>JavaJam Coffee House</h1>
 <nav>
-<b>
 <a href="index.html">Home</a>&nbsp;
 <a href="menu.html">Menu</a>&nbsp;
 <a href="music.html">Music</a>&nbsp;
 <a href="jobs.html">Jobs</a>&nbsp;
-</b>
 </nav>
 
 <main>
@@ -28,12 +28,12 @@
 </main>
 
 <footer>
-<p><i>Copyright &copy;2017 JavaJam Coffee House
+<p>Copyright &copy;2017 JavaJam Coffee House
 	<br>
-<a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a></i></p>
+<a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a></p>
 
 </footer>
-	
+</div>	
 </body>
 
 	</html>
